More method conflict tests and moving gen existence checks out of the parser and into full well-formedness